[gd_scene load_steps=4 format=3 uid="uid://w4iwfip0y10u"]

[ext_resource type="Script" path="res://Scenes/Bubbles/base_bubble.gd" id="1_hubat"]
[ext_resource type="SpriteFrames" path="res://Scenes/Bubbles/bubble.tres" id="2_ngfwp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_plv51"]
radius = 17.0294

[node name="BaseBubble" type="PathFollow2D"]
loop = false
script = ExtResource("1_hubat")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_ngfwp")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_plv51")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
